--- a/src/components/programming/programming.css
+++ b/src/components/programming/programming.css
@@ -33,7 +33,7 @@
 }
 
 .btn-2 {
-  background: #FFB74D;
+  background: #639ab7;
 }
 
 .btn-3 {
@@ -61,5 +61,5 @@ ul {
 }
 
 .html-2 {
-  color: #FFCC80;
+  color: #568ac9;
 }
